<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FourthFragment">

    <TextView
        android:id="@+id/text_view_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_view_name"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_view_lastname"
        app:layout_constraintTop_toBottomOf="@id/text_view_information"/>

    <TextView
        android:id="@+id/text_view_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastname"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_view_age"
        app:layout_constraintTop_toBottomOf="@+id/text_view_name"/>

    <TextView
        android:id="@+id/text_view_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_view_gender"
        app:layout_constraintTop_toBottomOf="@id/text_view_lastname"/>

    <TextView
        android:id="@+id/text_view_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_view_place_of_study"
        app:layout_constraintTop_toBottomOf="@+id/text_view_age"/>

    <TextView
        android:id="@+id/text_view_place_of_study"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_of_study"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_view_place_of_work"
        app:layout_constraintTop_toBottomOf="@id/text_view_gender"/>

    <TextView
        android:id="@+id/text_view_place_of_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_of_work"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_place_of_study"/>

</androidx.constraintlayout.widget.ConstraintLayout>