<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ThirdFragment">

    <EditText
        android:id="@+id/edit_text_place_of_study"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_of_study"
        android:textColorHint="@color/black"
        android:textSize="32sp"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_place_of_work"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_text_place_of_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_of_work"
        android:textColorHint="@color/black"
        android:textSize="32sp"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_in_third_fragment"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_place_of_study"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_in_third_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/done"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_place_of_work"/>

</androidx.constraintlayout.widget.ConstraintLayout>